@@ -1,11 +1,8 @@
 #!/bin/sh
 #
-
 unset DISPLAY
-BASE=`dirname $( readlink -f idempiere-server.sh )`
-ENVIRONMENTS=$BASE/utils/myEnvironment.sh
-. $ENVIRONMENTS
-
+BASE=`dirname $( readlink -f $0 )`
+. $BASE/utils/myEnvironment.sh Server
 if [ $JAVA_HOME ]; then
   JAVA=$JAVA_HOME/bin/java
 else
@@ -22,21 +19,25 @@ fi
 echo ===================================
 echo Starting iDempiere Server
 echo ===================================
-echo File: $ENVIRONMENTS
-echo Done.
+
+# if don't set from service get default value
+TELNET_PORT=${TELNET_PORT:-12612}
 
 
-VMOPTS="-Xbootclasspath/p:alpn-boot.jar
--Dorg.osgi.framework.bootdelegation=sun.security.ssl,org.eclipse.jetty.alpn
+VMOPTS="-Dorg.osgi.framework.bootdelegation=sun.security.ssl,org.w3c.dom.events
 -Dosgi.compatibility.bootdelegation=true
 -Djetty.home=$BASE/jettyhome
 -Djetty.base=$BASE/jettyhome
 -Djetty.etc.config.urls=etc/jetty.xml,etc/jetty-deployer.xml,etc/jetty-ssl.xml,etc/jetty-ssl-context.xml,etc/jetty-http.xml,etc/jetty-alpn.xml,etc/jetty-http2.xml,etc/jetty-https.xml
--Dosgi.console=localhost:12612
+-Dosgi.console=localhost:$TELNET_PORT
 -Dmail.mime.encodefilename=true
 -Dmail.mime.decodefilename=true
 -Dmail.mime.encodeparameters=true
--Dmail.mime.decodeparameters=true"
+-Dmail.mime.decodeparameters=true
+--add-exports java.desktop/sun.awt=ALL-UNNAMED
+--add-exports java.sql.rowset/com.sun.rowset=ALL-UNNAMED
+--add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED
+--add-modules=ALL-SYSTEM
+--add-modules java.se --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.sql.rowset/com.sun.rowset=ALL-UNNAMED --add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED"
 
 $JAVA ${DEBUG} $IDEMPIERE_JAVA_OPTIONS $VMOPTS -jar $BASE/plugins/org.eclipse.equinox.launcher_1.*.jar -application org.adempiere.server.application
-
